--- a/adjectives.yaml
+++ b/adjectives.yaml
@@ -1,11 +1,11 @@
-Petit: Малинький
+Petit: Маленький
 Grand: Большой
 Rouge: Красный
 Noir: Чёрный
 Bleu: Синий
 Jaune: Жёлтый
 Gris: Серый
-Bleu ciel: Галубой
+Bleu ciel: Голубой
 Blanc: Белый
 Orange: Оранжевый
 Vieux: Старый
@@ -13,16 +13,16 @@ Nouveau: Новый
 Jeune: Молодой
 Haut: Высокий
 Bas: Низкий
-Bien: Хороший
+Bien, bon: Хороший
 Mauvais: Плохой
-Bon: Добрый
+Bon, gentil: Добрый
 Méchant: Злой
 Clair: Светлый
 Sombre: Тёмный
 Propre: Чистый
 Sale: Грязныи
 Joli: Красивый
-Affreux: Страшный
+Affreux, moche: Страшный
 Intéressant: Интересный
 Ennuyeux: Скучный
 Sain: Здоровый
