add new adjectives and accentuation

--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -1,33 +1,44 @@
 Petit:
-  M: Маленький
-  N: Маленькое
-  F: Маленькая
-  P: Маленькие
-Grand: Большой
-Rouge: Красный
+  M: М(а)ленький
+  N: М(а)ленькое
+  F: М(а)ленькая
+  P: М(а)ленькие
+Grand: Больш(о)й
+Rouge: Кр(а)сный
 Noir: Чёрный
 Bleu: Синий
 Jaune: Жёлтый
-Gris: Серый
-Bleu ciel: Голубой
-Blanc: Белый
-Orange: Оранжевый
-Vieux: Старый
-Nouveau: Новый
-Jeune: Молодой
-Haut: Высокий
-Bas: Низкий
-Bien, bon: Хороший
-Mauvais: Плохой
-Bon, gentil: Добрый
+Gris: С(е)рый
+Bleu ciel: Голуб(о)й
+Blanc: Б(е)лый
+Orange: Ор(а)нжевый
+Vieux: Ст(а)рый
+Nouveau: Н(о)вый
+Jeune: Молод(о)й
+Haut: Выс(о)кий
+Bas: Н(и)зкий
+Bien, bon: Хор(о)ший
+Mauvais: Плох(о)й
+Bon, gentil: Д(о)брый
 Méchant: Злой
-Clair: Светлый
+Clair: Св(е)тлый
 Sombre: Тёмный
-Propre: Чистый
+Propre: Ч(и)стый
 Sale: Грязныи
-Joli: Красивый
-Affreux, moche: Страшный
-Intéressant: Интересный
-Ennuyeux: Скучный
-Sain: Здоровый
-Malade: Больной
+Joli: Крас(и)вый
+Affreux, moche: Стр(а)шный
+Intéressant: Интер(е)сный
+Ennuyeux: Ск(у)чный
+Sain: Здор(о)вый
+Malade: Больн(о)й
+Cadet: Мл(а)дший
+Aîné: Ст(а)рший
+Agé: Пожил(о)й
+Gros: Худ(о)й
+Maigre: Т(о)лстыи
+Facile: Лёгкий
+Compliqué: Сл(о)жный
+Calme: Спок(о)йный
+Bruyant: Ш(у)мный
+Froid: хол(о)дный
+Chaud: Гор(я)чий
