--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -9,7 +9,7 @@ Porte: Дверь
 Tasse: Чашка
 Chapka: Шапка
 Excusez-moi: Извините
-Au revoir: До свиданя
+Au revoir: До свидания
 Montagne: Гора
 Lait: Молоко
 Restaurant: Ресторан
