--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -6,7 +6,7 @@ Petit:
 Grand: Больш(о)й
 Rouge: Кр(а)сный
 Noir: Чёрный
-Bleu: Синий
+Bleu: С(и)ний
 Jaune: Жёлтый
 Gris: С(е)рый
 Bleu ciel: Голуб(о)й
@@ -24,7 +24,7 @@ Méchant: Злой
 Clair: Св(е)тлый
 Sombre: Тёмный
 Propre: Ч(и)стый
-Sale: Грязныи
+Sale: Гр(я)зный
 Joli: Крас(и)вый
 Affreux, moche: Стр(а)шный
 Intéressant: Интер(е)сный
@@ -35,7 +35,7 @@ Cadet: Мл(а)дший
 Aîné: Ст(а)рший
 Agé: Пожил(о)й
 Gros: Худ(о)й
-Maigre: Т(о)лстыи
+Maigre: Т(о)лстый
 Facile: Лёгкий
 Compliqué: Сл(о)жный
 Calme: Спок(о)йный
