--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -98,8 +98,8 @@ Voisin:
   M: Сос(е)д
   F: Сос(е)дка
 Mon copain:
-  M: у меня д(е)вушка
-  F: у меня п(а)рень
+  M: у меня п(а)рень
+  F: у меня д(е)вушка
 Mari / Femme:
   M: Муж
   F: жен(а)
