--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -14,7 +14,7 @@ Montagne: Гор(а)
 Lait: Молок(о)
 Restaurant: Рестор(а)н
 Hotel: Гост(и)ница
-Bonjour: Здравствуй(те)
+Bonjour: Здравствуйте
 Salut (Bonjour): Прив(е)т!
 Salut! (Au revoir): Пока!
 Vélo: Велосип(е)д
