add other category

--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -22,6 +22,7 @@ Copain: П(а)рень
 Baleine: Кит
 Travail: Раб(о)та
 Mug: Кружка
+Bien: Хорошо
 Guitare: Гитара
 Appartement: Кварт(и)ра
 Chambre: К(о)мната
@@ -123,3 +124,5 @@ Petite-fille:
   F: Вн(у)чка
 De rien: Пож(а)луйста
 Très: (О)чень
+Une personne: челове́к
+Année, an: год
