--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -1,5 +1,5 @@
 Qui est-ce ?: Kто Это?
 Qu’est-ce que c’est?: Что Это?
 Comment ça va ?: как дела?
-Et toi?: А тебя?
+Et toi?: А у тебя?
 J’ai 20 ans: Мне двадцать лет
