--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -43,5 +43,5 @@ Bruyant: Ш(у)мный
 Froid: хол(о)дный
 Chaud: Гор(я)чий
 Ok: Л(а)дно
-Autre, différent: друго́й
+Autre, différent: друг(о)й
 Loin: далёкий
