--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -40,7 +40,7 @@ Bureau: Бюр(о) / (О)фис
 Toilettes: Туал(е)т
 Pièce: К(о)мната
 Étage: Этаж
-Immeuble: Здание
+Immeuble: Зд(а)ние
 Père: От(е)ц
 Papa: П(а)па
 Mère: Мать
@@ -132,3 +132,5 @@ Année, an:
   M: год
 Cours, leçon:
   M: уро́к
+À gauche: Сл(е)ва
+À droite: Спр(а)ва
