--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -21,8 +21,8 @@ Vélo: Велосип(е)д
 Copain: П(а)рень
 Baleine: Кит
 Travail: Раб(о)та
-Mug: Кружка
-Bien: Хорошо
+Mug: Кр(у)жка
+Bien: Хорош(о)
 Guitare: Гитара
 Appartement: Кварт(и)ра
 Chambre: К(о)мната
@@ -131,6 +131,6 @@ Une personne, humain:
 Année, an:
   M: год
 Cours, leçon:
-  M: уро́к
+  M: Ур(o)к
 À gauche: Сл(е)ва
 À droite: Спр(а)ва
