--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -101,8 +101,8 @@ Voisin:
   M: Сос(е)д
   F: Сос(е)дка
 Mon copain:
-  M: у меня п(а)рень
-  F: у меня д(е)вушка
+  M: мой п(а)рень
+  F: моя д(е)вушка
 Mari / Femme:
   M: Муж
   F: жен(а)
