--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -127,7 +127,7 @@ Petite-fille:
 De rien: Пож(а)луйста
 Très: (О)чень
 Une personne, humain:
-  M: челове́к
+  M: челов(е)к
 Année, an:
   M: год
 Cours, leçon:
