--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -206,8 +206,8 @@ Vêtement, habit:
   N: Пл(а)тье
   P: Пл(а)тья
 Fusil:
-  N: Рыжь(ё)
-  P: Р(ы)жья
+  N: Ружь(ё)
+  P: Р(у)жья
 Prénom:
   N: (И)мя
   P: Имен(а)
