--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -2,3 +2,12 @@ Pas bien: Пл(о)хо
 Normalement: Норм(а)льнo
 Bien: Хорош(о)
 Super: Отл(и)чно
+Très: (О)чень
+Aussi: Т(о)же
+Beaucoup: Мн(о)го
+Un peu: Немн(о)го
+Peu: М(а)ло
+Hier: Вчер(а)
+Aujourd'hui: Сег(о)дня
+Demain: З(а)вара
+Maintenant: Сейч(а)с
