--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -5,4 +5,8 @@ Où: Где
 Comment: как
 Si, à condition: (е)сли
 Voici, voila: Вот
-Aussi: Тоже
+À propos de quoi: О чём
+À propos de qui: О ком
+Dans: В
+Sur: на
+À propos de: О / об / обо
