--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -113,7 +113,7 @@ Vieux:
   P: Пожилые л(ю)ди
 Ami:
   M: Друг
-  P: Другзь(я)
+  P: Друзь(я)
 Amie:
   F: Подр(у)га
   P: Подр(у)ги
@@ -309,8 +309,9 @@ Médecin:
   M: Врач
 Mec:
   M: Муж(и)к
+  P: мужик(и)
 Nana, meuf:
-  F: Баба
+  F: Б(а)ба
 Boîte:
   F: Кор(о)бка
 Hôpital:
