--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -34,8 +34,8 @@ Malade: Больн(о)й
 Cadet: Мл(а)дший
 Aîné: Ст(а)рший
 Agé: Пожил(о)й
-Gros: Худ(о)й
-Maigre: Т(о)лстый
+Maigre: Худ(о)й
+Gros: Т(о)лстый
 Facile: Лёгкий
 Compliqué: Сл(о)жный
 Calme: Спок(о)йный
