--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -152,7 +152,7 @@ Petit-fils:
   M: Внук
 Petite-fille:
   F: Вн(у)чка
-De rien: Пож(а)луйста
+S'il vous plaît, je vous en prie: Пож(а)луйста
 Une personne, humain:
   M: челов(е)к
   P: Л(ю)ди
