--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -4,3 +4,9 @@ Regarder: Смотр(е)ть
 Écrire: Пис(а)ть
 Aimer: Люб(и)ть
 Parler: Говор(и)ть
+Vivre, habiter: Жить
+Se promener: Гул(я)ть
+Penser: Д(у)мать
+Étre debout: Сто(я)ть
+Étre couché, se trouver: Леж(а)ть
+Être assis: Сид(е)ть
