--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -10,3 +10,11 @@ Penser: Д(у)мать
 Étre debout: Сто(я)ть
 Étre couché, se trouver: Леж(а)ть
 Être assis: Сид(е)ть
+Écouter: Сл(у)шать
+Faire: Д(е)лать
+Acheter: Покуп(а)ть
+Voir: В(и)деть
+Vouloir: Х(о)теть
+Étudier: Изуча(т)ь
+Manger: Есть
+Boire: Пить
