--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -406,3 +406,62 @@ Film:
   M: Фильм
 T-shirt:
   F: Футб(о)лка
+Nuage:
+  N: (О)блако
+  P: Облак(а)
+Pain:
+  M: Хлеб
+Fromage:
+  M: Сыр
+Viande:
+  N: М(я)со
+Pomme:
+  N: (Я)блоко
+Oeuf:
+  N: Яйц(о)
+Poisson:
+  F: Р(ы)ба
+Poulet:
+  F: К(у)рица
+Moutarde:
+  F: Горч(и)ца
+Vin:
+  N: Вин(о)
+Bière:
+  N: П(и)во
+Eau:
+  F: Вод(а)
+Musique:
+  F: М(у)зыка
+Légume:
+  M: (О)вощ
+Écharpe:
+  M: Шарф
+Retraite:
+  F: П(е)нсия
+Abeille:
+  M: Пчел(а)
+Apiculteur:
+  M: Пчелов(о)д
+Paris:
+  M: Пар(и)ж
+Marseille:
+  M: Марсель
+Lyon:
+  M: Лион
+Bordeaux:
+  N: Борд(о)
+Toulouse:
+  F: Тулуза
+Яйцо
+Рыба
+Курица
+Горчица
+Вино
+Пиво
+Вода
+Музыка
+Овощ
+Шарф
+Пчел(а)
+Пчелоб(о)д
