--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -47,4 +47,18 @@ Autre, différent: друг(о)й
 Loin: далёкий
 Violet: Фиол(е)товый
 Rose: Р(о)зовый
-Dernier: Посл(е)дний
+Dernier (ordre): Посл(е)дний
+Dernier (précédent): Пр(о)шлый
+Suivant: Сл(е)дующий
+Léger: Лёгкий
+Lourd, difficile: Тяжёлый
+Mou, doux: М(я)гкий
+Dur: Твёрдый
+Coupant: (О)стрый
+Stupide, émoussé: Туп(о)й
+Vivant: Жив(о)й
+Mort: Мёртвый
+Pauvre: Бе(д)ный
+Riche: Бог(а)тый
+Chauve: Л(ы)сый
+Chevelu: Волос(а)тый
