--- a/sources/adjectives.yaml
+++ b/sources/adjectives.yaml
@@ -58,7 +58,7 @@ Coupant: (О)стрый
 Stupide, émoussé: Туп(о)й
 Vivant: Жив(о)й
 Mort: Мёртвый
-Pauvre: Бе(д)ный
+Pauvre: Б(е)дный
 Riche: Бог(а)тый
 Chauve: Л(ы)сый
 Chevelu: Волос(а)тый
