--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -18,3 +18,9 @@ Vouloir: Х(о)теть
 Étudier: Изуча(т)ь
 Manger: Есть
 Boire: Пить
+Savoir, connaitre: Знать
+Savoir faire: Уметь
+Pouvoir: Мочь
+Être: Быть
+Aller (à pied): Идт(и)
+Aller (à pied) .ind.: Х(о)дить
