--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -14,13 +14,13 @@ Penser: Д(у)мать
 Faire: Д(е)лать
 Acheter: Покуп(а)ть
 Voir: В(и)деть
-Vouloir: Х(о)теть
-Étudier: Изуча(т)ь
+Vouloir: Хот(е)ть
+Étudier: Изуч(а)ть
 Manger: Есть
 Boire: Пить
 Savoir, connaitre: Знать
-Savoir faire: Уметь
+Savoir faire: Ум(е)ть
 Pouvoir: Мочь
 Être: Быть
 Aller (à pied): Идт(и)
-Aller (à pied) .ind.: Х(о)дить
+Aller (à pied) .ind.: Ход(и)ть
