--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -13,3 +13,6 @@ Demain: З(а)втра
 Maintenant: Сейч(а)с
 À sois même: Себ(е)
 Ne..que/Seulement: Т(о)лько
+Toujours: Всегда
+trop: Сл(и)шком мн(о)го
+Pas assez: Сл(и)шком немн(о)го
