--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -16,3 +16,10 @@ Ne..que/Seulement: Т(о)лько
 Toujours: Всегда
 trop: Сл(и)шком мн(о)го
 Pas assez: Сл(и)шком немн(о)го
+Souvent: Ч(а)сто
+Parfois: Иногд(а)
+Chaque jour: К(а)ждый день
+Rarement: Р(е)дко
+Jamais: Никогд(а)
+Toujours: Всегд(а)
+Longtemps: Д(о)лго
