--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -1,8 +1,8 @@
 Que, quoi: что
-Qui: кто
-Quand: когд(а)
+Qui: Кто
+Quand: Когд(а)
 Où: Где
-Comment: как
+Comment: Как
 Si, à condition: (е)сли
 Voici, voila: Вот
 À propos de quoi: О чём
@@ -14,3 +14,8 @@ Ou: Или
 Où (destination, adonde): Куда
 Déjà: Уж(е)
 Encore: Ещё
+Une fois: Од(и)н раз
+Quelques fois: Н(е)сколько раз
+Soudain: Вдруг
+En (en 1 jour): За
+Il faut: Н(а)до, ну́жно
