--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -24,3 +24,6 @@ Pouvoir: Мочь
 Être: Быть
 Aller (à pied): Идт(и)
 Aller (à pied) .ind.: Ход(и)ть
+Commencer à: Начин(а)ть
+Continuer à: Продолж(а)ть
+Finir de: Конч(а)ть
