--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -22,3 +22,11 @@ Rarement: Р(е)дко
 Jamais: Никогд(а)
 Toujours: Всегд(а)
 Longtemps: Д(о)лго
+Vite: Б(ы)сtро
+Pourquoi: Почем(у)
+Allez!: Дав(а)й
+Avant: Р(а)ньше
+Après: Пот(о)м
+Ici: Здесь
+Enfin: Након(е)ц
+Dommage: Жаль
