--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -18,4 +18,11 @@ Une fois: Од(и)н раз
 Quelques fois: Н(е)сколько раз
 Soudain: Вдруг
 En (en 1 jour): За
-Il faut: Н(а)до, ну́жно
+Il faut: н(у)жно
+Tout:
+  M: Весь
+  F: Всё
+  N: Вся
+  P: Все
+J'ai besoin: Мне н(у)жно
+Peut-être: М(о)жет быть
