--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -3,3 +3,5 @@ Qu’est-ce que c’est?: Что Это?
 Comment ça va ?: как дела?
 Et toi?: А у тебя?
 J’ai 20 ans: Мне двадцать лет
+Tu veux du café ?: Будешь кофе ?
+La langue Russe: Русский яз(ы)к
