--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -1,29 +1,59 @@
-Travailler: Раб(о)тать
-Lire: Чит(а)ть
-Regarder: Смотр(е)ть
-Écrire: Пис(а)ть
-Aimer: Люб(и)ть
-Parler: Говор(и)ть
-Vivre, habiter: Жить
-Se promener: Гул(я)ть
-Penser: Д(у)мать
-Étre debout: Сто(я)ть
-Étre couché, se trouver: Леж(а)ть
-Être assis: Сид(е)ть
-Écouter: Сл(у)шать
-Faire: Д(е)лать
-Acheter: Покуп(а)ть
-Voir: В(и)деть
-Vouloir: Хот(е)ть
-Étudier: Изуч(а)ть
-Manger: Есть
-Boire: Пить
-Savoir, connaitre: Знать
-Savoir faire: Ум(е)ть
-Pouvoir: Мочь
-Être: Быть
-Aller (à pied): Идт(и)
-Aller (à pied) .ind.: Ход(и)ть
-Commencer à: Начин(а)ть
-Continuer à: Продолж(а)ть
-Finir de: Конч(а)ть
+Travailler:
+  I: Раб(о)тать
+Lire:
+  I: Чит(а)ть
+Regarder:
+  I: Смотр(е)ть
+Écrire:
+  I: Пис(а)ть
+Aimer:
+  I: Люб(и)ть
+Parler:
+  I: Говор(и)ть
+Vivre, habiter:
+  I: Жить
+Se promener:
+  I: Гул(я)ть
+Penser:
+  I: Д(у)мать
+Étre debout:
+  I: Сто(я)ть
+Étre couché, se trouver:
+  I: Леж(а)ть
+Être assis:
+  I: Сид(е)ть
+Écouter:
+  I: Сл(у)шать
+Faire:
+  I: Д(е)лать
+Acheter:
+  I: Покуп(а)ть
+Voir:
+  I: В(и)деть
+Vouloir:
+  I: Хот(е)ть
+Étudier:
+  I: Изуч(а)ть
+  P: Изуч(и)ть
+Manger:
+  I: Есть
+Boire:
+  I: Пить
+Savoir, connaitre:
+  I: Знать
+Savoir faire:
+  I: Ум(е)ть
+Pouvoir:
+  I: Мочь
+Être:
+  I: Быть
+Aller (à pied):
+  I: Идт(и)
+Aller (à pied) .ind.:
+  I: Ход(и)ть
+Commencer à:
+  I: Начин(а)ть
+Continuer à:
+  I: Продолж(а)ть
+Finir de:
+  I: Конч(а)ть
