--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -30,10 +30,10 @@ Penser:
   I: Сид(е)ть
 Écouter:
   I: Сл(у)шать
-  I: Посл(у)шать
+  P: Посл(у)шать
 Entendre:
   I: Сл(ы)шать
-  I: Усл(ы)шать
+  P: Усл(ы)шать
 Faire:
   I: Д(е)лать
   P: Сд(е)лать
@@ -62,7 +62,7 @@ Savoir faire:
   P: Сум(е)ть
 Pouvoir:
   I: Мочь
-  I: Смочь
+  P: Смочь
 Être:
   I: Быть
 Aller (à pied):
