--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -30,3 +30,6 @@ Après: Пот(о)м
 Ici: Здесь
 Enfin: Након(е)ц
 Dommage: Жаль
+Pas longtemps: Нед(о)лго
+C'est pourquoi: По(э)тому
+Combien: Ск(о)лько
