--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -5,3 +5,4 @@ Et toi?: А у тебя?
 J’ai 20 ans: Мне двадцать лет
 Tu veux du café ?: Будешь кофе ?
 La langue Russe: Русский яз(ы)к
+Quel age as tu ?: Ск(о)лько тебе лет
