--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -107,3 +107,15 @@ Commencer:
 Finir:
   I: Конч(а)ть
   P: К(о)нчить
+Téléphoner:
+  I: Звон(и)ть
+  P: Позвон(и)ть
+Offrir:
+  I: Дар(и)ть
+  P: Подар(и)ть
+Montrer:
+  I: Пок(а)зывать
+  P: Показ(а)ть
+Expliquer:
+  I: Объясн(я)ть
+  P: Объясн(и)ть
