--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -514,3 +514,11 @@ Le Weekend:
   P: Выходн(ы)е
 Jour de repos:
   M: Выходн(о)й денЬ
+Matin:
+  N: (У)тро
+Fin:
+  M: Коне́ц
+Cadeau:
+  M: Под(а)рок
+Photograhpie:
+  F: Фотогр(а)фия
