--- a/sources/other.yaml
+++ b/sources/other.yaml
@@ -23,7 +23,7 @@ Peut-être: М(о)жет быть
 J'ai besoin: Мне н(у)жно
 Tout:
   M: Весь
-  F: Всё
-  N: Вся
+  N: Всё
+  F: Вся
   P: Все
 Rien: Ничег(о)
