--- a/sources/sentences.yaml
+++ b/sources/sentences.yaml
@@ -6,3 +6,13 @@ J’ai 20 ans: Мне двадцать лет
 Tu veux du café ?: Будешь кофе ?
 La langue Russe: Русский яз(ы)к
 Quel age as tu ?: Ск(о)лько тебе лет
+J'ai froid: Мне х(о)лодно
+J'ai chaud: Мне ж(а)рко
+j'ai peur: Мне стр(а)шно
+Je m'ennuie: Мне ск(у)чно
+J'ai mal: Мне б(о)лно
+J'ai envie de..: Мне х(о)четься
+Ça me plait de..: Мне нр(а)вится
+Il me semble que..: Мне к(а)жется
+Chaque matin: По (у)трам
+Chaque soir: По в(е)черам
