--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -105,8 +105,8 @@ Commencer:
   I: Начин(а)ть
   P: Нач(а)ть
 Finir:
-  I: Конч(а)ть
-  P: К(о)нчить
+  I: Зак(а)нчивать, Конч(а)ть
+  P: Зак(о)нчить, К(о)нчить
 Téléphoner:
   I: Звон(и)ть
   P: Позвон(и)ть
@@ -119,3 +119,15 @@ Montrer:
 Expliquer:
   I: Объясн(я)ть
   P: Объясн(и)ть
+Aider qlq:
+    I: Помог(а)ть
+    P: Пом(о)чь
+Choisir:
+  I: Выбир(а)ть
+  P: В(ы)брать
+Continuer:
+  I: Продолж(а)ть
+  P: прод(о)лжить
+Dormir, se reposer:
+  I: Спать
+  P: Посп(а)ть
