--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -35,3 +35,8 @@ C'est pourquoi: По(э)тому
 Combien: Ск(о)лько
 Tôt: Р(а)но
 D'habitude: Об(ы)чно
+Entre: М(е)жду
+Au dessus: Под
+Au dessous: Над
+Devant: П(е)ред
+Derrière: За
