--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -532,3 +532,21 @@ Exercice:
 Animaux domestiques:
   P: Дом(а)шние жив(о)тные
 Après midi: П(о)сле об(е)да
+Terre:
+  F: Земл(я)
+Sport:
+  M: Спорт
+Hache:
+  M: Топ(о)р
+Éte:
+  N: Л(е)то
+Hiver:
+  F: Зим(а)
+Automne:
+  F: Весн(а)
+Printemps:
+  F: (О)сень
+Crayon:
+  M: Каранд(а)ш
+Riz:
+  M: Рис
