--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -36,7 +36,7 @@ Combien: Ск(о)лько
 Tôt: Р(а)но
 D'habitude: Об(ы)чно
 Entre: М(е)жду
-Au dessus: Под
-Au dessous: Над
+Au dessus: Над
+Au dessous: Под
 Devant: П(е)ред
 Derrière: За
