--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -150,3 +150,23 @@ Utiliser:
 Tuer:
   I: Убив(а)ть
   P: Уб(и)ть
+Petit-déjeuner:
+  I: З(а)втракать
+  P: Поз(а)втракать
+couter:
+  I: Ст(о)ить
+Aller /en transport:
+  I: (Е)хать
+  P: По(е)хать
+Mélanger, mixer:
+  I: Перем(е)шивать
+  P: Перемеш(а)ть
+Corriger:
+  I: Исправл(я)ть
+  P: Испр(а)вить
+Mesurer:
+  I: Измер(я)ть
+  P: Изм(е)рить
+Ouvrir:
+  I: Откр(ы)ть
+  P: Открыв(а)ть
