--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -33,6 +33,7 @@ Dommage: Жаль
 Pas longtemps: Нед(о)лго
 C'est pourquoi: По(э)тому
 Combien: Ск(о)лько
+Quelque: Н(е)сколько
 Tôt: Р(а)но
 D'habitude: Об(ы)чно
 Entre: М(е)жду
