--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -575,3 +575,51 @@ Rivière, fleuve:
   F: Рек(а)
 Lac:
   F: (О)зера
+Argent:
+  P: денег
+1:
+  M: один
+  N: одна
+  F: одно
+2:
+  M: два
+  N: два
+  F: две
+3: три
+4: четыре
+5: пять
+6: шесть
+7: семь
+8: восемь
+9: девять
+10: десять
+11: одиннадцать
+12: двенадцать
+13: тринадцать
+14: четырнадцать
+15: пятнадцать
+16: шестнадцать
+17: семнадцать
+18: восемнадцать
+19: девятнадцать
+20: двадцать
+21:
+  M: двадцать один
+  N: двадцать одна
+  F: двадцать одно
+30: тридцать
+40: сорок
+50: пятьдесят
+60: шестьдесят
+70: семьдесят
+80: восемьдесят
+90: девяносто
+100: сто
+Capitale:
+  F: Столица
+Pays:
+  F: Страна
+Écrivain:
+  M: Писатель
+Artiste:
+  M: Художник
