--- a/sources/adverbs.yaml
+++ b/sources/adverbs.yaml
@@ -10,7 +10,7 @@ Peu: М(а)ло
 Hier: Вчер(а)
 Aujourd'hui: Сег(о)дня
 Demain: З(а)втра
-Maintenant: Сейч(а)с
+Maintenant: Сейч(а)с, Теп(е)рь
 À sois même: Себ(е)
 Ne..que/Seulement: Т(о)лько
 Trop: Сл(и)шком мн(о)го
@@ -41,5 +41,4 @@ Au dessus: Над
 Au dessous: Под
 Devant: П(е)ред
 Derrière: За
-Maintenant: Теп(е)рь
 À côté de: Рядом с
