--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -517,7 +517,7 @@ Jour de repos:
 Matin:
   N: (У)тро
 Fin:
-  M: Коне́ц
+  M: Кон(е)ц
 Cadeau:
   M: Под(а)рок
 Photograhpie:
@@ -529,7 +529,8 @@ Article:
   F: Стать(я)
 Exercice:
   N: Упражн(е)ние
-Animaux domestiques:
+Animal domestique:
+  N: дом(а)шнее жив(о)тное
   P: Дом(а)шние жив(о)тные
 Après midi: П(о)сле об(е)да
 Terre:
@@ -574,9 +575,10 @@ Tire-bouchon:
 Rivière, fleuve:
   F: Рек(а)
 Lac:
-  F: (О)зера
+  N: (О)зеро
+  P: озёра
 Argent:
-  P: денег
+  P: деньги
 1:
   M: один
   N: одна
@@ -586,40 +588,44 @@ Argent:
   N: два
   F: две
 3: три
-4: четыре
+4: чет(ы)ре
 5: пять
 6: шесть
 7: семь
-8: восемь
-9: девять
-10: десять
-11: одиннадцать
-12: двенадцать
-13: тринадцать
-14: четырнадцать
-15: пятнадцать
-16: шестнадцать
-17: семнадцать
-18: восемнадцать
-19: девятнадцать
-20: двадцать
+8: в(о)семь
+9: д(е)вять
+10: д(е)сять
+11: од(и)ннадцать
+12: двен(а)дцать
+13: трин(а)дцать
+14: чет(ы)рнадцать
+15: пятн(а)дцать
+16: шестн(а)дцать
+17: семн(а)дцать
+18: восемн(а)дцать
+19: девятн(а)дцать
+20: дв(а)дцать
 21:
-  M: двадцать один
-  N: двадцать одна
-  F: двадцать одно
-30: тридцать
-40: сорок
-50: пятьдесят
-60: шестьдесят
-70: семьдесят
-80: восемьдесят
-90: девяносто
+  M: дв(а)дцать од(и)н
+  N: дв(а)дцать одн(а)
+  F: дв(а)дцать одн(о)
+22:
+  M: дв(а)дцать два
+  N: дв(а)дцать два
+  F: дв(а)дцать две
+30: тр(и)дцать
+40: с(о)рок
+50: пятьдес(я)т
+60: шестьдес(я)т
+70: с(е)мьдесят
+80: в(о)семьдесят
+90: девян(о)сто
 100: сто
 Capitale:
-  F: Столица
+  F: Стол(и)ца
 Pays:
-  F: Страна
+  F: Стран(а)
 Écrivain:
-  M: Писатель
+  M: Пис(а)тель
 Artiste:
-  M: Художник
+  M: Худ(о)жник
