--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -153,7 +153,7 @@ Tuer:
 Petit-déjeuner:
   I: З(а)втракать
   P: Поз(а)втракать
-couter:
+Couter:
   I: Ст(о)ить
 Aller /en transport:
   I: (Е)хать
