--- a/sources/verbs.yaml
+++ b/sources/verbs.yaml
@@ -170,3 +170,11 @@ Mesurer:
 Ouvrir:
   I: Откр(ы)ть
   P: Открыв(а)ть
+Couper:
+  I: Р(е)зать
+  P: Нар(е)зать
+Venir de, arriver de:
+  I: Приход(и)ть
+  P: Прийт(и)
+Discuter:
+  I: Разгов(а)ривать
