--- a/sources/vocabulary.yaml
+++ b/sources/vocabulary.yaml
@@ -629,3 +629,10 @@ Pays:
   M: Пис(а)тель
 Artiste:
   M: Худ(о)жник
+Boîte, coffre:
+  M: (Я)шик
+Séchresse:
+  F: З(а)суха
+Chaussure:
+  F: (О)бувь
+  P: (О)буви
